fix: crash add: UIGraphicsGetCurrentContext

--- a/TestEndLessPaper/Base.lproj/Main.storyboard
+++ b/TestEndLessPaper/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQf-Tp-74N" customClass="CanvasView" customModule="TestEndLessPaper" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="414" height="856"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TA6-rm-DSK">
                                 <rect key="frame" x="189" y="833" width="36" height="30"/>
