--- a/TestEndLessPaper/Base.lproj/Main.storyboard
+++ b/TestEndLessPaper/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -58,7 +58,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Double tap to create a circle" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cww-Uh-dWN">
-                                        <rect key="frame" x="8" y="418" width="398" height="21"/>
+                                        <rect key="frame" x="99.5" y="417.5" width="215" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -67,12 +67,11 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <gestureRecognizers/>
                                 <constraints>
+                                    <constraint firstItem="cww-Uh-dWN" firstAttribute="centerY" secondItem="oQf-Tp-74N" secondAttribute="centerY" id="7OH-Ge-gon"/>
                                     <constraint firstAttribute="trailing" secondItem="stc-es-Wma" secondAttribute="trailing" constant="8" id="7l3-tT-0Lb"/>
-                                    <constraint firstAttribute="trailing" secondItem="cww-Uh-dWN" secondAttribute="trailing" constant="8" id="SG4-IW-aFi"/>
-                                    <constraint firstItem="cww-Uh-dWN" firstAttribute="leading" secondItem="oQf-Tp-74N" secondAttribute="leading" constant="8" id="a6X-IR-gkw"/>
+                                    <constraint firstItem="cww-Uh-dWN" firstAttribute="centerX" secondItem="oQf-Tp-74N" secondAttribute="centerX" id="Bqa-Zw-Z4Z"/>
                                     <constraint firstItem="F4e-8Q-iGa" firstAttribute="leading" secondItem="oQf-Tp-74N" secondAttribute="leading" constant="20" symbolic="YES" id="gBZ-Vm-ZAy"/>
                                     <constraint firstAttribute="bottom" secondItem="stc-es-Wma" secondAttribute="bottom" constant="70" id="nOS-a4-wOv"/>
-                                    <constraint firstItem="F4e-8Q-iGa" firstAttribute="top" secondItem="cww-Uh-dWN" secondAttribute="bottom" constant="288" id="oKP-Gh-bUg"/>
                                     <constraint firstItem="stc-es-Wma" firstAttribute="top" secondItem="F4e-8Q-iGa" secondAttribute="bottom" constant="6" id="oMR-qo-B78"/>
                                     <constraint firstItem="stc-es-Wma" firstAttribute="leading" secondItem="oQf-Tp-74N" secondAttribute="leading" constant="8" id="ujP-wg-dOa"/>
                                     <constraint firstAttribute="trailing" secondItem="F4e-8Q-iGa" secondAttribute="trailing" constant="20" symbolic="YES" id="vBS-dM-E1C"/>
